# tt-metal

models/demos/vision/classification/resnet50/blackhole/demo/: benchmark_e2e_profile.py  benchmark_e2e_profile_turbojpeg.py  benchmark_e2e_profile_turbojpeg_threaded.py
models/demos/vision/classification/resnet50/blackhole/demo/cpp_preprocessing/: README.md  benchmark_e2e_profile_cpp_preprocess.py  cpp_resnet_preprocess.cpp  setup.py
resnet50_codegen/graph_0/: CMakeLists.txt  benchmark_codegen_e2e.cpp  run  run_benchmark  ttnn-standalone.cpp  ttnn.mlir
resnet50_codegen/graph_0/irs/: shlo_1782750193170.mlir  shlo_compiler_cleaned_1782750193898.mlir  shlo_frontend_1782750193186.mlir  shlo_set_mesh_attr_1782750193883.mlir  ttir_1782750193918.mlir  vhlo_1782750193133.mlir
